force-app/main/default/objects/FMSBillACBal__c/FMSBillACBal__c.object-meta.xml
<CustomObject>
    <label>F/TMS Bill+A/C Bal</label>
    <nameField>
        <displayFormat>FBAC-{000000}</displayFormat>
        <label>FMS BILL+A/C BAL ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>F/TMS Bill+A/C Bal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>