force-app/main/default/objects/FMSBillACBal__c/fields/AccountedDateFormu__c.field-meta.xml
<CustomField>
    <fullName>AccountedDateFormu__c</fullName>
    <formula>FMSBillID__r.SalesAccountedDateInvoicing__c</formula>
    <label>ACCOUNTED DATE-FORMU</label>
    <type>Date</type>
</CustomField>