force-app/main/default/objects/FMSBillACBal__c/fields/AmountOfTaxBuyingLocalFormu__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTaxBuyingLocalFormu__c</fullName>
    <formula>FMSBillID__r.BuyTaxNum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMOUNT OF TAX-BUYING(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>