force-app/main/default/objects/FMSBillACBal__c/fields/AmountOfTaxSellingLocalFormu__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTaxSellingLocalFormu__c</fullName>
    <formula>FMSBillID__r.SellTaxNum__c</formula>
    <label>AMOUNT OF TAX-SELLING(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>