force-app/main/default/objects/FMSBillACBal__c/fields/FMSBillID__c.field-meta.xml
<CustomField>
    <fullName>FMSBillID__c</fullName>
    <label>FMS BILL ID</label>
    <referenceTo>AnkenMeisai__c</referenceTo>
    <relationshipLabel>FMS BILL+A/C BAL</relationshipLabel>
    <relationshipName>FmsBillACBal</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>