force-app/main/default/objects/FMSBillACBal__c/fields/InvoiceToFormu__c.field-meta.xml
<CustomField>
    <fullName>InvoiceToFormu__c</fullName>
    <formula>FMSBillID__r.Seikyusaki__r.Name</formula>
    <label>INVOICE TO-FORMU</label>
    <type>Text</type>
</CustomField>