force-app/main/default/objects/FMSBillACBal__c/fields/TotalAmountOfBuyingLocalFormu__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfBuyingLocalFormu__c</fullName>
    <formula>FMSBillID__r.BuyAmountJPN__c</formula>
    <label>TOTAL AMOUNT OF BUYING(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>