force-app/main/default/objects/FMSBillACBal__c/fields/TotalAmountOfBuyingUSDFormu__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfBuyingUSDFormu__c</fullName>
    <formula>FMSBillID__r.BuyAmountUSD__c</formula>
    <label>TOTAL AMOUNT OF BUYING(USD)-FORMU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>