force-app/main/default/objects/FMSBillACBal__c/fields/TotalAmountOfSellingLocalFormu__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfSellingLocalFormu__c</fullName>
    <formula>FMSBillID__r.SellAmountJPN__c</formula>
    <label>TOTAL AMOUNT OF SELLING(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>