force-app/main/default/objects/FMSBillACBal__c/fields/TotalAmountOfSellingUSDFormu__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfSellingUSDFormu__c</fullName>
    <label>TOTAL AMOUNT OF SELLING(USD)-FORMU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>