force-app/main/default/objects/FMSBillACBal__c/fields/UnpaidBalanceOfBuyingLocalFormula__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceOfBuyingLocalFormula__c</fullName>
    <formula>FMSBillID__r.BuyDifferentiation__c</formula>
    <label>UNPAID BAL OF BUYING(LOCAL)-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>