force-app/main/default/objects/FMSBillACBal__c/fields/UnpaidBalanceOfBuyingUSDACBal__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceOfBuyingUSDACBal__c</fullName>
    <label>UNPAID BAL OF BUYING(USD)-A/C BAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>