force-app/main/default/objects/FMSBillACBal__c/fields/UnpaidBalanceOfBuyingUSDFormula__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceOfBuyingUSDFormula__c</fullName>
    <formula>FMSBillID__r.UNPAID_BALANCE_OF_BUYING_USD__c</formula>
    <label>UNPAID BAL OF BUYING(USD)-FORMULA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>