force-app/main/default/objects/FMSBillACBal__c/fields/UnreceivedBalanceOfSellingLocalACBal__c.field-meta.xml
<CustomField>
    <fullName>UnreceivedBalanceOfSellingLocalACBal__c</fullName>
    <label>UNRECEIVED BAL OF SELLING(LOCAL)-A/C BAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>