force-app/main/default/objects/FMSBillACBal__c/fields/UnreceivedBalanceOfSellingUSDACBal__c.field-meta.xml
<CustomField>
    <fullName>UnreceivedBalanceOfSellingUSDACBal__c</fullName>
    <label>UNRECEIVED BAL OF SELLING(USD)-A/C BAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>