force-app/main/default/objects/FMSBillACBal__c/fields/UnreceivedBalanceOfSellingUSDFormula__c.field-meta.xml
<CustomField>
    <fullName>UnreceivedBalanceOfSellingUSDFormula__c</fullName>
    <formula>FMSBillID__r.UNPAID_BALANCE_OF_SELLING_USD__c</formula>
    <label>UNRECEIVED BAL OF SELLING(USD)-FORMULA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>